force-app/main/default/objects/Order/fields/Bill_To_City__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_City__c</fullName>
    <description>Contains Bill to city information related to its respective Bill-to Account</description>
    <formula>lkp_BillToAccount__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To City</label>
    <type>Text</type>
</CustomField>