force-app/main/default/objects/Order/fields/Bill_To_Street__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Street__c</fullName>
    <description>Contains Bill To Street information related to its respective Bill-to Account</description>
    <formula>lkp_BillToAccount__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Street</label>
    <type>Text</type>
</CustomField>