force-app/main/default/objects/Order/fields/chk_BypassValidation__c.field-meta.xml
<CustomField>
    <fullName>chk_BypassValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom field that allows validation rules to be bypassed in flows.</description>
    <label>Bypass Validation</label>
    <type>Checkbox</type>
</CustomField>