force-app/main/default/objects/Order/fields/dat_CRDPlannedOrderDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>dat_CRDPlannedOrderDeliveryDate__c</fullName>
    <description>The date the order is planned by Customer...</description>
    <inlineHelpText>The date the order is planned by Customer...</inlineHelpText>
    <label>CRD Planned Delivery Date</label>
    <type>Date</type>
</CustomField>