force-app/main/default/objects/Order/fields/dat_SAPPlannedOrderDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>dat_SAPPlannedOrderDeliveryDate__c</fullName>
    <description>Provided by SAP, once the order is transferred...</description>
    <inlineHelpText>Provided by SAP, once the order is transferred</inlineHelpText>
    <label>SAP Planned Delivery Date</label>
    <type>Date</type>
</CustomField>