force-app/main/default/objects/Order/fields/dt_CRDPlannedOrderDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>dt_CRDPlannedOrderDeliveryDate__c</fullName>
    <inlineHelpText>Date the Order is planned by Customer</inlineHelpText>
    <label>CRD Planned Delivery Date</label>
    <type>Date</type>
</CustomField>