force-app/main/default/objects/Order/fields/dt_SAPPlannedOrderDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>dt_SAPPlannedOrderDeliveryDate__c</fullName>
    <inlineHelpText>Provided by SAP, once the order is transferred</inlineHelpText>
    <label>SAP Planned Delivery Date</label>
    <type>Date</type>
</CustomField>