force-app/main/default/objects/Order/fields/ftxt_PONo__c.field-meta.xml
<CustomField>
    <fullName>ftxt_PONo__c</fullName>
    <description>Contains the number of the PO we received from the customer.</description>
    <formula>IF(
    NOT(ISBLANK(SBQQ__Quote__r.txt_PONo__c)),
    SBQQ__Quote__r.txt_PONo__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contains the number of the PO we received from the customer.</inlineHelpText>
    <label>PO No.</label>
    <type>Text</type>
</CustomField>