force-app/main/default/objects/Order/fields/lkp_BillToAccount__c.field-meta.xml
<CustomField>
    <fullName>lkp_BillToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is to select Bill-to Account</description>
    <label>Bill-to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>