force-app/main/default/objects/Order/fields/lkp_PersonResponsible__c.field-meta.xml
<CustomField>
    <fullName>lkp_PersonResponsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field that is needed for the Order interface.</description>
    <label>Person Responsible</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>