force-app/main/default/objects/Order/fields/lkp_SalesArea__c.field-meta.xml
<CustomField>
    <fullName>lkp_SalesArea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Structure sales based on a regional division of the market.</description>
    <label>Sales Area</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>sales area Value does not exist in account</errorMessage>
        <filterItems>
            <field>SalesAreaLink__c.mdr_Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SalesAreaLink__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>