force-app/main/default/objects/Order/fields/lkp_ShipToAccount__c.field-meta.xml
<CustomField>
    <fullName>lkp_ShipToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is to select Ship-to Account</description>
    <label>Ship-to Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The selected Account status shouldn&#39;t be &quot;Bosch Partner Number not Received&quot;</errorMessage>
        <filterItems>
            <field>Account.pkl_Status__c</field>
            <operation>notEqual</operation>
            <value>Bosch Partner Number not Received, Bosch Partner Number not Received</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Ship-to Account)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>