force-app/main/default/objects/Order/fields/lkp_ToolCoordinator__c.field-meta.xml
<CustomField>
    <fullName>lkp_ToolCoordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field value is inherited from the Quote (Person responsible for License, etc.,) to ensure quicker Order processing and data integrity</description>
    <inlineHelpText>Input contact details of person on customer side, managing license distribution to users on customer side</inlineHelpText>
    <label>Tool Coordinator</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>