force-app/main/default/objects/Order/fields/Personal_Text_on_Order__c.field-meta.xml
<CustomField>
    <fullName>Personal_Text_on_Order__c</fullName>
    <inlineHelpText>Text on Header Level</inlineHelpText>
    <label>Personal Text on Order</label>
    <length>200</length>
    <type>Text</type>
</CustomField>