force-app/main/default/objects/Order/fields/pkl_INCOTerms1__c.field-meta.xml
<CustomField>
    <fullName>pkl_INCOTerms1__c</fullName>
    <description>Mandatory field for ERP interface, essential to define sales terms and passing of risk</description>
    <label>INCOTERM</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>INCOTerms1</valueSetName>
    </valueSet>
</CustomField>