force-app/main/default/objects/Order/fields/pkl_PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>pkl_PaymentTerms__c</fullName>
    <description>Mandatory field for ERP interface that define payment terms agreed with customer</description>
    <label>Payment Terms</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__PaymentTerm</valueSetName>
    </valueSet>
</CustomField>