force-app/main/default/objects/Order/fields/pkl_ReasonOfCancellation__c.field-meta.xml
<CustomField>
    <fullName>pkl_ReasonOfCancellation__c</fullName>
    <description>Defines the possible reasons for order cancellation.</description>
    <label>Reason of Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXCEEDED_CREDIT_LIMIT</fullName>
                <label>Exceeded Credit Limit</label>
            </value>
            <value>
                <fullName>CANCELED_BY_SAP</fullName>
                <label>Canceled by SAP</label>
            </value>
            <value>
                <fullName>CANCELED_BY_CUSTOMER</fullName>
                <label>Canceled by Customer</label>
            </value>
            <value>
                <fullName>CANCELED_BY_SALESREP</fullName>
                <label>Canceled by Sales Rep</label>
            </value>
            <value>
                <fullName>OTHER</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>