force-app/main/default/objects/Order/fields/Ship_To_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Postal_Code__c</fullName>
    <description>Contains Ship To Postal Code information related to its respective Ship-to Account</description>
    <formula>lkp_ShipToAccount__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Postal Code</label>
    <type>Text</type>
</CustomField>