force-app/main/default/objects/Order/fields/Ship_To_State__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_State__c</fullName>
    <description>Contains Ship To State information related to its respective Ship-to Account</description>
    <formula>lkp_ShipToAccount__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To State</label>
    <type>Text</type>
</CustomField>