force-app/main/default/objects/Order/fields/txt_INCOTerms2__c.field-meta.xml
<CustomField>
    <fullName>txt_INCOTerms2__c</fullName>
    <description>Mandatory field for ERP interface which defines location the INCO Terms will start.</description>
    <label>INCO Terms 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>