force-app/main/default/objects/Order/fields/txt_SAPExternalSolutionQuotationId__c.field-meta.xml
<CustomField>
    <fullName>txt_SAPExternalSolutionQuotationId__c</fullName>
    <description>It is used to store SAP External Solution Quotation Id</description>
    <externalId>true</externalId>
    <label>SAP External Solution Quotation Id</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>