force-app/main/default/objects/Order/validationRules/Check_order_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_order_start_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL( Status , &quot;Activated&quot;), EffectiveDate  &lt;  TODAY()  
)</errorConditionFormula>
    <errorMessage>Order Status cannot be updated. Order start date must be today or a future date</errorMessage>
</ValidationRule>