force-app/main/default/objects/Order/validationRules/PO_Number_Length_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_Number_Length_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISBLANK(PoNumber)) , LEN( PoNumber) &gt; 35 )</errorConditionFormula>
    <errorDisplayField>PoNumber</errorDisplayField>
    <errorMessage>PO Number cannot exceed 35 characters in length</errorMessage>
</ValidationRule>