force-app/main/default/objects/Order/validationRules/Reason_for_Cancellation_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_for_Cancellation_Required</fullName>
    <active>true</active>
    <description>The reason for cancellation is mandatory when the order is moved to status Canceled(Final - Lost)</description>
    <errorConditionFormula>AND( ISCHANGED(Status),  ISPICKVAL( Status , &#39;Canceled (Final – Lost)&#39;), ISBLANK( TEXT(pkl_ReasonOfCancellation__c)))</errorConditionFormula>
    <errorMessage>The Reason of Cancellation is required!</errorMessage>
</ValidationRule>